# papi

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
endstone_papi/: plugin.py
examples/cpp/: CMakeLists.txt
examples/python/endstone_papi_pyexample/: plugin.py
