[build-system]
requires = ["scikit-build-core-conan", "pybind11"]
build-backend = "scikit_build_core_conan.build"

[project]
name = "endstone-papi"
version = "0.0.1"
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
    { name = "daoge_cmd", email = "3523206925@qq.com" },
]
description = "A Placeholder API Plugin for Endstone."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["plugin", "python", "c++", "minecraft", "bedrock", "papi"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.entry-points."endstone"]
papi = "endstone_papi:PlaceholderAPIPlugin"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.args = ["-G Ninja"]
cmake.build-type = "RelWithDebInfo"
cmake.define = { BUILD_TESTING = "OFF" }
wheel.packages = ["endstone_papi"]
wheel.license-files = ["LICENSE"]
install.components = ["python"]
install.strip = false
sdist.exclude = ["endstone_papi/*.cpp"]

[tool.scikit-build-core-conan]
config = ["tools.cmake.cmaketoolchain:generator=Ninja"]

[tool.cibuildwheel]
skip = ["pp*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "ghcr.io/endstonemc/manylinux_2_31_x86_64"
environment = { LLVM_VERSION = 16, CC = "/usr/bin/clang", CXX = "/usr/bin/clang++" }
before-all = [
    "apt-get update -y -q && apt-get install -y -q build-essential lsb-release wget software-properties-common gnupg",
    "wget https://apt.llvm.org/llvm.sh && chmod +x llvm.sh && ./llvm.sh ${LLVM_VERSION}",
    "apt-get install -y -q libc++-${LLVM_VERSION}-dev libc++abi-${LLVM_VERSION}-dev",
    "update-alternatives --install /usr/bin/clang clang /usr/bin/clang-${LLVM_VERSION} 100",
    "update-alternatives --install /usr/bin/clang++ clang++ /usr/bin/clang++-${LLVM_VERSION} 100",
]